              "Eric K. Olson" <olson@mauicomputing.com>.

              picttoppm: Fix wild memory reference in all use cases.

              picttoppm: Fix for multi-pixel-per-byte image in which
              it says the image has a row that is too long (because of
              padding).

              pamtogif: fix crash with -mapfile.

              pamtoxvmini: fix bug: produces garbage when maxval is
              not 255.

              pamtoxvmini: fix crash.

              libnetpbm: fix buffer overrun with PBM images < 8 columns.

              libnetpbm: fix crash with PBM images < 8 columns on MMX/SSE
              machine.

              pamtogif: fail properly if image to wide or high for GIF.

              ppmdraw: fix crash with use of freed storage.  Thanks
              John Walker <kelvin@fourmilab.ch>.

              libnetpbm: fix crash with PAM read as PNM.

              installnetpbm: use 2-argument open() for old Perl.
    
              configure: default to 'none' for Svgalib if it doesn't appear
              to be installed.

06.12.31 BJH  Release 10.37.0

              Add pambackground.  But doesn't find mid-row background yet.

              pnmcrop, pamtopnm: work on multi-image stream.
              Thanks Erik Auerswald <auerswal@unix-ag.uni-kl.de>.

              pnmshear: add -background.  Thanks Erik Auerswald
              <auerswal@unix-ag.uni-kl.de>.

              ppmtogif: replace with pamtogif.  Fix garbage output with
              -interlace.

              pbmtoxbm: add -name option.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pbmtoxbm: Use packed PBM functions for efficiency.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.
              
              xbmtopbm: Use packed PBM functions for efficiency.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              cmuwmtopbm, mgrtopbm, pbmtocmuwm, pbmtoicon, pbmtomgr: